fix: shift directions marker icon further left and up

--- a/components/directions-marker-icon/directions-marker-icon.css
+++ b/components/directions-marker-icon/directions-marker-icon.css
@@ -4,7 +4,8 @@
   justify-content: center;
   width: 0.735rem;
   height: 0.735rem;
-  margin-left: -0.125rem;
+  margin-top: -0.125rem;
+  margin-left: -0.25rem;
   flex-shrink: 0;
   overflow: visible;
 }
